--- a/front.css
+++ b/front.css
@@ -592,7 +592,7 @@ nav {
   }
   #detailPane {
     padding: 15px;
-    max-height: 80vh; /* Constrain height for scrolling */
+    max-height: 100%; /* Constrain height for scrolling */
     overflow-y: auto; /* Ensure scrolling */
     height: 550px;
   }
@@ -651,7 +651,7 @@ nav {
   }
   #detailPane {
     padding: 10px;
-    max-height: 75vh; /* Adjust for smaller screens */
+    max-height: 100%; /* Adjust for smaller screens */
     overflow-y: auto; /* Ensure scrolling */
   }
   .title {
@@ -729,7 +729,7 @@ nav {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100vh; /* Full viewport height */
+  height: 100%; /* Full viewport height */
   background: #000; /* Dark background like Netflix */
   z-index: 1000;
   display: none;
@@ -805,28 +805,27 @@ nav {
   width: 100%;
   height: 100%;
   border: none;
-  max-width: 100vw;
-  max-height: 100vh;
+  max-width: 100%;
+  max-height: 100%;
   object-fit: cover;
 }
-
 .player-pane {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   background: #000;
   z-index: 1000;
-  display: none; /* Hidden by default */
+  display: none;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  transition: transform 0.3s ease; /* Smooth transition for rotation */
+  transition: transform 0.3s ease;
 }
 
 .player-pane.open {
-  display: flex; /* Show when open */
+  display: flex;
 }
 
 .player-pane.landscape {
@@ -834,8 +833,8 @@ nav {
   transform-origin: 50% 50%;
   top: 50%;
   left: 50%;
-  width: 100vh;
-  height: 100vw;
+  width: 100%;
+  height: 100%;
   margin-left: -50vh;
   margin-top: -50vw;
 }
