--- a/front.css
+++ b/front.css
@@ -833,6 +833,8 @@ nav {
   transform-origin: 50% 50%;
   top: 0%;
   left: 0%;
+  right:0%;
+  bottom:0%;
   width: 100%;
   height: 100%;
   margin-left: -50vh;
